--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ id 'application'
 group 'to-do.list'
 version '1.0-SNAPSHOT'
 
-mainClass = 'App'
+//mainClass = 'App'
 
 sourceCompatibility = 1.8
 
@@ -17,9 +17,12 @@ mavenCentral()
 dependencies {
 testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
 testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
-implementation "com.sparkjava:spark-core:2.6.0"
+implementation 'com.sparkjava:spark-core:2.9.3'
 implementation "com.sparkjava:spark-template-handlebars:2.5.5"
 implementation 'org.slf4j:slf4j-simple:1.7.21'
 implementation 'org.sql2o:sql2o:1.5.4'
 implementation group: 'com.h2database', name: 'h2', version: '1.4.191'
+}
+application {
+    mainClass = 'com.todo.App'  // Replace with your actual main class
 }
