--- a/build.gradle
+++ b/build.gradle
@@ -26,3 +26,7 @@ implementation group: 'com.h2database', name: 'h2', version: '1.4.191'
 application {
     mainClass = 'com.todo.App'  // Replace with your actual main class
 }
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
+}
