Fix Gradle sourceCompatibility

--- a/build.gradle
+++ b/build.gradle
@@ -1,31 +1,19 @@
 plugins {
-id 'java'
-id 'application'
+    id 'java'
+    id 'application'
 }
 
-group 'to-do.list'
-version '1.0-SNAPSHOT'
-
-//mainClass = 'App'
-
-sourceCompatibility = 1.8
-
 repositories {
-mavenCentral()
+    mavenCentral()
 }
 
 dependencies {
-testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
-implementation 'com.sparkjava:spark-core:2.9.3'
-implementation "com.sparkjava:spark-template-handlebars:2.5.5"
-implementation 'org.slf4j:slf4j-simple:1.7.21'
-implementation 'org.sql2o:sql2o:1.5.4'
-implementation group: 'com.h2database', name: 'h2', version: '1.4.191'
+    implementation 'com.sparkjava:spark-core:2.9.3'
 }
+
 application {
-    mainClass = 'com.todo.App'  // Replace with your actual main class
-}
+    mainClass = 'com.todo.App'  
+
 java {
     sourceCompatibility = JavaVersion.VERSION_17
     targetCompatibility = JavaVersion.VERSION_17
