--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ dependencies {
 }
 
 application {
-    mainClass = 'com.todo.App'  // ✅ Use your actual main class here
+    mainClass = 'com.todo.App' 
 }
 
 java {
