--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ repositories {
 
 dependencies {
     implementation 'com.sparkjava:spark-core:2.9.3'
+    implementation 'com.sparkjava:spark-template-handlebars:2.7.1' 
 }
 
 application {
