--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ dependencies {
     implementation 'com.sparkjava:spark-template-handlebars:2.7.1' 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.3'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.3'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.3'
+testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.3'
 }
 
 application {
